# cubic

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SECURITY.md  snapcraft.yaml  taskfile.yml  vulnlog.yml
.cargo/: audit.toml  config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: check-pr-commits.sh
.github/workflows/: build.yml  cubic.yml  deb.yml  doc.yml  pull-request.yml  snap.yml
docs/: build.md  conf.py  index.html  index.rst  install.rst
docs/_static/: home-link.js
docs/concepts/: how_it_works.rst
docs/howto/: add_instance.rst  environment_variables.rst  getting_started.rst  http_server.rst  install.rst  qemu_detection.rst  ssh_connect.rst
docs/install/: snap.md  source.md
docs/internals/: how_it_works.rst  qemu_detection.rst  security.rst
docs/reference/: add.rst  clone.rst  completions.rst  config.rst  console.rst  create.rst  cubic.rst  delete.rst  image.rst  images.rst  info.rst  instances.rst  ls.rst  modify.rst  mount.rst  net.rst  ports.rst  prune.rst  rename.rst  restart.rst  rm.rst  run.rst  scp.rst  sh.rst  show.rst  ssh.rst  start.rst  stop.rst
docs/troubleshooting/: recover_disk.rst
docs/usage/: add_delete.md  configure.md  copy_mount.md  hostfwd.md  list.md  rename_clone.md  sh.md  start_stop.md
scripts/: generate-docs.sh  generate-page.sh
src/: actions.rs  arch.rs  cli.rs  cloudinit.rs  commands.rs  emulator.rs  env.rs  error.rs  firmware.rs  fs.rs  image.rs  instance.rs  iso9660.rs  machine.rs  main.rs  model.rs  models.rs  platform.rs  qemu.rs  ssh_cmd.rs  util.rs  view.rs  web.rs
src/actions/: create_instance_action.rs  start_instance_action.rs  stop_instance_action.rs
src/cloudinit/: meta_data_factory.rs  user_data_factory.rs  user_data_image_factory.rs
src/commands/: add.rs  attach.rs  clone.rs  clone_command.rs  command_dispatcher.rs  completions_command.rs  config.rs  console.rs  console_command.rs  context.rs  create_command.rs  create_instance_command.rs  delete.rs  delete_command.rs  delete_instance_command.rs  env_args.rs  exec_command.rs  image.rs  info.rs  instance.rs  instance_add_command.rs  instance_arg.rs  instance_clone_command.rs  instance_config_command.rs  instance_console_command.rs  instance_exec_command.rs  instance_info_command.rs  instance_list_command.rs  instance_modify_command.rs  instance_remove_command.rs  instance_rename_command.rs  instance_restart_command.rs  instance_run_command.rs  instance_scp_command.rs  instance_show_command.rs  instance_ssh_command.rs  instance_start_command.rs  instance_stop_command.rs  iso9660_arg.rs  list.rs  (+27 more)
src/commands/net/: hostfwd.rs
src/env/: environment.rs  environment_factory.rs
src/image/: almalinux_image_provider.rs  archlinux_image_provider.rs  debian_image_provider.rs  fedora_image_provider.rs  gentoo_image_provider.rs  image_cache.rs  image_dao.rs  image_factory.rs  image_fetcher.rs  image_name.rs  image_provider.rs  image_store.rs  image_store_mock.rs  opensuse_image_provider.rs  rockylinux_image_provider.rs  ubuntu_image_provider.rs
src/instance/: instance_cert_generator.rs  instance_dao.rs  instance_deserializer.rs  instance_serializer.rs  instance_state.rs  instance_store.rs  instance_store_mock.rs  port_forward.rs  target.rs  target_instance_path.rs  target_path.rs  toml_instance_deserializer.rs  yaml_instance_deserializer.rs
src/iso9660/: binary_writer.rs  dir_record.rs  dir_record_factory.rs  iso_writer.rs  primary_volume_desc.rs  term_volume_desc.rs  volume_desc.rs
src/machine/: machine_dao.rs
src/model/: data_size.rs  instance_image_name.rs
src/models/: arch.rs  checksum.rs  config.rs  data_size.rs  environment.rs  image.rs  image_name.rs  instance.rs  instance_cert_paths.rs  instance_image_name.rs  instance_name.rs  port_forward.rs  resource_allocator.rs  target.rs  target_instance_path.rs  target_path.rs  user_name.rs
src/platform/: stream.rs  system.rs  system_mock.rs
src/qemu/: guest_agent.rs  monitor.rs  qemu_firmware.rs  qemu_firmware_descriptor.rs  qemu_img.rs  qemu_path_builder.rs  qemu_system.rs  qmp.rs  qmp_message.rs  tls_client.rs
src/ssh_cmd/: openssh.rs  port_checker.rs  russh.rs  scp.rs  sftp_path.rs  ssh.rs  ssh_factory.rs  ssh_key_generator.rs
src/util/: async_caller.rs  env.rs  filesystem.rs  generate_random_ssh_port.rs  hex.rs  input.rs  migration.rs  process.rs  qemu.rs  shortcut_decoder.rs  ssh.rs  string.rs  system_command.rs  terminal.rs
src/view/: animation.rs  async_transfer_view.rs  confirm_dialog.rs  console.rs  console_mock.rs  instance_state_change_view.rs  map_view.rs  progress_bar.rs  spinner.rs  spinner_view.rs  stdio.rs  table_view.rs  time_duration.rs  timer_view.rs  transfer_view.rs
src/web/: web_client.rs
