[package]
name = "cubic"
version = "0.20.0"
authors = ["Roger Knecht <rknecht@pm.me>"]
license = "MIT OR Apache-2.0"
description = """\
Cubic is a lightweight command line manager for virtual machines. It has a 
simple, daemonless and rootless design. All Cubic virtual machines run isolated
in the user context. Cubic is built on top of QEMU, KVM and cloud-init.

Examples:

  Create a new VM instance with:
  $ cubic create example --image ubuntu:noble
  Open a shell in the VM instance:
  $ cubic ssh example

  Alternatively, use `run` to execute the above commands in a single command:
  $ cubic run example --image ubuntu:noble

  Show all supported VM images:
  $ cubic images

  List previously created VM instances:
  $ cubic instances

  Show information about a VM instance:
  $ cubic show <instance>

  Execute a command in a VM instance:
  $ cubic exec <instance> <shell command>

  Transfer files and directories between host and VM instance:
  $ cubic scp <path/to/host/file> <instance>:<path/to/guest/file>
  See `cubic scp --help` for more examples

For more information, visit: https://cubic-vm.org/
The source code is located at: https://github.com/cubic-vm/cubic
"""
readme = "README.md"
homepage = "https://cubic-vm.org"
repository = "https://github.com/cubic-vm/cubic"
keywords = ["cli", "vm"]
categories = ["command-line-utilities"]
edition = "2024"

[features]
qemu-sandbox = []

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
crossterm = "0"
regex = "1"
reqwest = { version = "0", default-features = false, features = ["rustls-tls", "blocking", "gzip", "brotli"] }
russh = "0"
russh-sftp = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0"
sha2 = "0"
ssh-key = { version = "0", features = ["ed25519", "rand_core"]}
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["fs", "io-std"] }
toml = "1"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[package.metadata.deb]
maintainer = "Roger Knecht <rknecht@pm.me>"
copyright = "2026, Roger Knecht <rknecht@pm.me>"
license-file = ["LICENSE-APACHE", "0", "LICENSE-MIT", "0"]
extended-description = """A lightweight command-line manager for virtual machines ."""
depends = "qemu-system-x86, qemu-system-arm, genisoimage"
section = "utility"
priority = "optional"
assets = [
    ["target/release/cubic", "usr/bin/", "755"],
    { source = "README.md", dest = "usr/share/doc/cubic/README", mode = "644"},
]
