[package]
name = "cubic"
version = "0.0.0-dev"
authors = ["Roger Knecht <rknecht@pm.me>"]
license = "MIT OR Apache-2.0"
description = "Daemonless, rootless CLI virtual machine manager built on QEMU, KVM and cloud-init"
readme = "README.md"
homepage = "https://cubic-vm.org"
repository = "https://github.com/cubic-vm/cubic"
keywords = ["cli", "vm"]
categories = ["command-line-utilities"]
edition = "2024"

[features]
qemu-sandbox = []

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
crossterm = "0"
regex = "1"
reqwest = { version = "0", default-features = false, features = ["rustls-tls", "blocking", "gzip", "brotli"] }
russh = "0"
russh-sftp = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0"
sha2 = "0"
ssh-key = { version = "0", features = ["ed25519", "rand_core"]}
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["fs", "io-std"] }
toml = "1"
whoami = { version = "2", default-features = false, features = ["std"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[package.metadata.deb]
maintainer = "Roger Knecht <rknecht@pm.me>"
copyright = "2026, Roger Knecht <rknecht@pm.me>"
license-file = ["LICENSE-APACHE", "0", "LICENSE-MIT", "0"]
extended-description = """A lightweight command-line manager for virtual machines ."""
depends = "qemu-system-x86, qemu-system-arm"
section = "utility"
priority = "optional"
assets = [
    ["target/release/cubic", "usr/bin/", "755"],
    { source = "README.md", dest = "usr/share/doc/cubic/README", mode = "644"},
]
